# shkuba

./: .gitignore  INTEGRATION_SUMMARY.md  README.md  build.gradle  build.gradle.kts  global-copilot-instructions.md  settings.gradle  settings.gradle.kts
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/shkuba/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  shkuba_jni.cpp
app/src/main/cpp/logic/: board.cpp  board.h  card.cpp  card.h  deck.cpp  deck.h  game.cpp  game.h  gameBot.cpp  gameBot.h  hand.cpp  hand.h  pile.cpp  round.cpp  round.h  roundLogic.md  shkuba.vcxproj  shkuba.vcxproj.filters
app/src/main/java/com/dinari/shkuba/: Board.kt  Card.kt  CardConverter.kt  Deck.kt  Game.kt  GameBot.kt  GameManager.kt  GameViewModel.kt  Hand.kt  Round.kt
app/src/main/java/com/shkuba/: GameUI.kt  MainActivity.kt
app/src/main/java/com/shkuba/native/: Board.kt  Deck.kt  GameBot.kt  GameEngine.kt  Hand.kt  NativeCard.kt  Round.kt
app/src/main/java/com/shkuba/network/: NetworkService.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/test/java/com/shkuba/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
logic/: board.cpp  card.cpp  deck.cpp  deck.h  hand.cpp  shkuba.sln  shkuba.vcxproj.filters
(+6 files in other folders)
